--- a/Brico/src/tools/css/tools.module.css
+++ b/Brico/src/tools/css/tools.module.css
@@ -7,7 +7,8 @@
 }
 
 .container > div {
-  background-color: blue;
+  background-color: rgb(37, 45, 58);
+  border: 1px solid white;
   width: calc(100% - 40px); /* 100% width minus 20px left and 20px right */
   height: 200px;
   margin-left: 20px;
