--- a/Brico/src/tools/tools/css/slab.module.css
+++ b/Brico/src/tools/tools/css/slab.module.css
@@ -59,6 +59,55 @@
   background-color: rgb(137, 223, 0);
 }
 
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.resultContainer {
+  background-color: #111827;
+  color: #f1f5f9;
+  padding: 16px;
+  margin-top: 16px;
+  border-radius: 12px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
+  font-family: "Arial", sans-serif;
+}
+
+.copyButtonWrapper {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.copyButton {
+  background-color: #22c55e;
+  color: black;
+  font-weight: bold;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 12px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.copyButton:hover {
+  background-color: #16a34a;
+}
+
 .ul {
-  background-color: rgb(0, 0, 0);
+  list-style-type: none;
+  padding: 0;
+}
+
+.ul h2 {
+  font-size: 16px;
+  margin: 8px 0;
+  padding: 10px;
+  background-color: rgb(37, 45, 58);
+  /* background-color: #1f2937; */
+  border-radius: 8px;
+  text-align: left;
 }
